--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#0AC395</color>
+    <color name="Green_Cyan">#2DAC71</color>
+    <color name="Green_Cyan_Turquoise">#258A5B</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_orange">#F6BC65</color>
+    <color name="yellow">#FFFFCB05</color>
+    <color name="orange">#FFFF4500</color>
+    <color name="green">#FF77CC55</color>
+    <color name="blue">#FF0095D9</color>
+    <color name="pink">#FFEE718D</color>
+    <color name="light_gray">#FFCFCFC4</color>
+    <color name="dark_gray">#FF6A6A6A</color>
+    <color name="purple">#7542C6</color>
+    <color name="red">#FFFF4D4D</color>
+    <color name="violet">#791680</color>
+    <color name="brown">#FFA52A2A</color>
 </resources>
