--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,10 +16,7 @@
         android:name="com.example.pokemontask.DetailsFragment"
         android:label="DetailsFragment" >
         <argument
-            android:name="pokemonName"
-            app:argType="string" />
-        <argument
-            android:name="color"
+            android:name="ARG_NAME"
             app:argType="string" />
         <action
             android:id="@+id/action_detailsFragment_to_pokemonListFragment4"
